Fix particles on mobile?

--- a/styles/main.css
+++ b/styles/main.css
@@ -125,6 +125,7 @@ p {
   bottom: 0px;
   left: -100px;
   right: -100px;
+  overflow: hidden;
   z-index: -1;
 }
 
